--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "5.5",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "styled-components": "^6.1.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,6 +50,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-input-mask": "^3.0.5",
+    "@types/redux": "^3.6.0",
     "@types/styled-components": "^5.1.34",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
